[package]
edition = "2021"
name = "receiver_433"
version = "0.1.0"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", path = "deps/embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-executor = { version = "0.2.0", path = "deps/embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", path = "deps/embassy/embassy-time", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "deps/embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0", path = "deps/embassy/embassy-futures" }
embassy-usb = { version = "0.1.0", path = "deps/embassy/embassy-usb", features = ["defmt"] }
embassy-sync = { version = "0.2.0", path = "deps/embassy/embassy-sync", features = ["defmt", "nightly"] }

static_cell = { version = "1.1", features = ["nightly"]}

embedded-io = { version = "0.4.0", features = ["async"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

fixed = "1.23.1"
fixed-macro = "1.2"

defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

pio-proc = "0.2"
pio = "0.2.1"

[profile.release]
debug = true
